Format db models, list and form view of help centers

--- a/rescue/connect/templates/connect/center.html
+++ b/rescue/connect/templates/connect/center.html
@@ -8,7 +8,10 @@
 <div class="container">
 
     <h1>{{center.name}}</h1>
+    <p>{{center.address}}</p>
+    <p>{{center.description}}</p>
 
 </div>
+
 
 {% endblock %}
