--- a/rescue/templates/navbar.html
+++ b/rescue/templates/navbar.html
@@ -2,6 +2,6 @@
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
         <a class="navbar-brand" href="{% url 'connect:index' %}" style="color: #00b14f">RescueNepal</a>
-        <a class="btn btn-success" href="#">Register Help Center</a>
+        <a class="btn btn-success" href="{% url 'connect:add_help_center' %}">Register Help Center</a>
     </div>
 </nav>
