--- a/rescue/connect/templates/connect/add_need_help.html
+++ b/rescue/connect/templates/connect/add_need_help.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 <div class="container mx-auto" style="width: 1000px;"><br>
-    <h1>Register New <a style="color: #00b14f">Help Center / Food Bank</a></h1><br>
+    <h1>Tell us more about the <a style="color: #00b14f">help needed.</a></h1><br>
     <form method="POST">{% csrf_token %}
-        {{ help_center_form.as_p }}
+        {{ need_help_form.as_p }}
         <button class="btn btn-success" type="submit">Submit</button>
 
     </form>
