--- a/rescue/connect/templates/connect/index.html
+++ b/rescue/connect/templates/connect/index.html
@@ -40,8 +40,8 @@
     </div>
     <hr>
 
-    <a class="btn btn-success btn-lg" href="#" role="button">I want to help</a>
-    <a class="btn btn-danger btn-lg" href="{% url 'connect:list_help' %}" role="button">See who needs help</a>
+    <a class="btn btn-success btn-lg" href="{% url 'connect:list_help' %}" role="button">I want to help</a>
+    <a class="btn btn-danger btn-lg" href="{% url 'connect:list_need' %}" role="button">See who needs help</a>
 
     <hr>
 
@@ -54,16 +54,20 @@
         {% for help_center in help_centers %}
 
         <div class="col mb-4">
+            <!-- {% url 'connect:center' pk=help_center.pk %} -->
 
-            <a href="{% url 'connect:center' pk=help_center.pk %}">
+            <a href="#">
                 <div class="card">
                     <img src="{% static 'connect/groceries.jpg' %}" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">{{help_center.name}}</h5>
                         <p>{{help_center.address}}</p>
+                        <p style="color: #00b14f"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-telephone-outbound-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511zM11 .5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V1.707l-4.146 4.147a.5.5 0 0 1-.708-.708L14.293 1H11.5a.5.5 0 0 1-.5-.5z"/>
+                          </svg>&nbsp;&nbsp;{{help_center.contact}}</p>
                         <p class="card-text">{{help_center.description}}</p>
                         <p>{% for need in help_center.needs.all %} <span
-                            class="badge badge-pill badge-success">{{need}}</span>{% endfor %}</p>
+                                class="badge badge-pill badge-success">{{need}}</span>{% endfor %}</p>
                     </div>
                 </div>
             </a>
