Remove static image

--- a/rescue/connect/templates/connect/index.html
+++ b/rescue/connect/templates/connect/index.html
@@ -58,7 +58,7 @@
 
             <a href="#">
                 <div class="card">
-                    <img src="{% static 'connect/groceries.jpg' %}" class="card-img-top" alt="">
+                    <img src="#" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">{{help_center.name}}</h5>
                         <p>{{help_center.address}}</p>
