--- a/rescue/connect/templates/connect/index.html
+++ b/rescue/connect/templates/connect/index.html
@@ -41,7 +41,7 @@
     <hr>
 
     <a class="btn btn-success btn-lg" href="{% url 'connect:list_help' %}" role="button">I want to help</a>
-    <a class="btn btn-danger btn-lg" href="{% url 'connect:list_need' %}" role="button">See who needs help</a>
+    <a class="btn btn-danger btn-lg" href="{% url 'connect:list_need' %}" role="button">Needs help</a>
 
     <hr>
 
