--- a/rescue/connect/templates/connect/index.html
+++ b/rescue/connect/templates/connect/index.html
@@ -33,7 +33,7 @@
         crisis and disaster.</p>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <strong>Notice: </strong> Because of the crisis led by COVID19 lockdown, many families are suffering. Find help
-        centers operating nearby. We need <strong>YOU!</strong>
+        centers operating nearby.
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
