Change button text

--- a/rescue/connect/templates/connect/index.html
+++ b/rescue/connect/templates/connect/index.html
@@ -40,8 +40,8 @@
     </div>
     <hr>
 
-    <a class="btn btn-success btn-lg" href="{% url 'connect:list_help' %}" role="button">Register for help</a>
-    <a class="btn btn-danger btn-lg" href="{% url 'connect:list_need' %}" role="button">Someone needs help</a>
+    <a class="btn btn-success btn-lg" href="{% url 'connect:list_help' %}" role="button">I want to help</a>
+    <a class="btn btn-danger btn-lg" href="{% url 'connect:list_need' %}" role="button">Someone needs help!</a>
 
     <hr>
 
