--- a/rescue/connect/templates/connect/list_help.html
+++ b/rescue/connect/templates/connect/list_help.html
@@ -17,7 +17,7 @@
 
 <div class="container">
 
-    <a class="btn btn-success btn-lg" href="{% url 'connect:add_help' %}" role="button">I want to register for help!</a>
+    <a class="btn btn-success btn-lg" href="{% url 'connect:add_help' %}" role="button">I want to register to help!</a>
     <hr>
 
     <h3>There are other superheroes who would like to help too. Feel free to connect.</h3>
